--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "Tyler Snyder <tylersnyder@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.3",
-    "jimp": "^0.2.28"
+    "jimp": "^0.2.28",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
