--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.3",
+    "install": "^0.10.1",
     "jimp": "^0.2.28",
+    "npm": "^5.1.0",
     "uuid": "^3.1.0",
+    "valid-url": "^1.0.9",
     "xss": "^0.3.3"
   },
   "devDependencies": {
