--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.15.3",
     "install": "^0.10.1",
+    "is-image": "^2.0.0",
     "jimp": "^0.2.28",
     "npm": "^5.1.0",
     "uuid": "^3.1.0",
