--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.15.3",
     "is-image": "^2.0.0",
     "jimp": "^0.2.28",
+    "request": "^2.81.0",
     "uuid": "^3.1.0",
     "valid-url": "^1.0.9",
     "xss": "^0.3.3"
